This is a changelog for developers only, not for ordinary users.

23/03/2001
  - Update object keys when adding/removing steps.

21/03/2001
  - Improved Linux About dialog.

15/03/2001
  - Fixed drawing area border not being drawn correctly.

13/03/2001
  - Fixed texture font not visible on some video cards.

21/02/2001
  - New shortcuts: Home/End keys will change the Pieces List selection (win32).
  - Fixed the creation and destruction of the MainWnd under win32.

19/02/2001
  - The "Mouse moves in 3D" option now applies to rotations too.

04/02/2001
  - When multiple pieces are selected, rotate around the piece that has focus.
  - Clicking on a piece with focus now deselects it.
  - Only define LC_HAVE_PNGLIB if zlib is available.
  - Don't compile jpeg or png support if libraries are not present.

02/02/2001
	- HTML dialog now correctly remembers the last settings
	- Added step add/remove commands

01/02/2001
	- Fixed a crash deselecting point lights

07/01/2001
        - Added a new command to create floating views of the project

05/01/2001
        - Added a new cross platform class for handling OpenGL windows
        - Added a new base window class for handling top level windows

02/01/2001
        - Linux PPC fixes - LeoCAD now works on big endian computers !
          Thanks to Lon Shapiro for allowing me to use his Mac for debugging.

30/12/2000
        - Added Step Insert and Step Delete commands.

29/12/2000
        - Capture mouse events while dragging the cursor under linux.
        - HTML Dialog improvements under linux.

28/12/2000
        - Click on "Last Step" goes to the last used step instead of step 255.
        - Save HTML dialog options.

24/12/2000
        - Fixed piece combo under linux.

20/12/2000
        - Fixed crash when saving pictures of multiple steps.

================================================================================
                                  Version 0.73