@@ -2,6 +2,7 @@ This is a changelog for developers only, not for ordinary users.
 
 23/03/2001
   - Update object keys when adding/removing steps.
+  - Added an option to save HTML files with .html extension instead of .htm.
 
 21/03/2001
   - Improved Linux About dialog.
